[gd_scene load_steps=15 format=2]

[ext_resource path="res://mystic_woods_free_v0.2/tiradentes.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Tiradentes.gd" type="Script" id=2]
[ext_resource path="res://Interface/QuestionBox.tscn" type="PackedScene" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 640, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 128, 640, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 192, 640, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 256, 640, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 320, 640, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 384, 640, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 448, 640, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 512, 640, 64, 64 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 6, 6.5 )

[sub_resource type="CircleShape2D" id=11]
radius = 16.5076

[node name="Tiradentes" type="KinematicBody2D"]
script = ExtResource( 2 )
dialog_text = [ "a", "a", "a", "a", "a" ]
question_text = [ "a", "a", "a", "a" ]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 1 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 9 )
animation = "idle"
frame = 5
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 13.5 )
shape = SubResource( 10 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.5, 6.5 )
shape = SubResource( 11 )

[node name="QuestionBox" parent="." instance=ExtResource( 3 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 2
visible = false

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
margin_right = 385.0
margin_bottom = 192.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer"]
margin_left = 142.0
margin_top = 86.0
margin_right = 242.0
margin_bottom = 106.0

[node name="Button" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
margin_right = 100.0
margin_bottom = 20.0
text = "Receber livro!"

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="correct_answer" from="QuestionBox" to="." method="_on_QuestionBox_correct_answer"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
